--- a/src/pages/operator/css/SimpleCameraView.css
+++ b/src/pages/operator/css/SimpleCameraView.css
@@ -23,8 +23,9 @@
 .simple-video-canvas {
     display: inline-block;
     width: 100%;
-    height: 100%;
+    max-height: 100%;
     object-fit: cover;
+    aspect-ratio: 9 / 16;
 }
 
 .simple-video-canvas.constrainedHeight {
